--- a/galaxy.yml
+++ b/galaxy.yml
@@ -7,4 +7,4 @@ license_file: LICENSE
 name: frr
 namespace: frr
 readme: README.rst
-repository: https://github.com/ansible-collections/frr
+repository: https://github.com/ansible-collections/frr.frr
