--- a/galaxy.yml
+++ b/galaxy.yml
@@ -5,6 +5,7 @@ dependencies:
   "ansible.netcommon": "*"
 license_file: LICENSE
 name: frr
+tags: [routing, networking, facts]
 namespace: frr
 readme: README.rst
 repository: https://github.com/ansible-collections/frr.frr
