--- a/galaxy.yml
+++ b/galaxy.yml
@@ -7,5 +7,5 @@ license_file: LICENSE
 name: frr
 tags: [routing, networking, facts]
 namespace: frr
-readme: README.rst
+readme: README.md
 repository: https://github.com/ansible-collections/frr.frr
