added 'issues' to 'galaxy.yml'

--- a/galaxy.yml
+++ b/galaxy.yml
@@ -10,3 +10,4 @@ namespace: frr
 readme: README.md
 description: Ansible Collection for Free Range Routing (FRR).
 repository: https://github.com/ansible-collections/frr.frr
+issues: https://github.com/ansible-collections/frr.frr/issues
