--- a/galaxy.yml
+++ b/galaxy.yml
@@ -2,7 +2,7 @@
 authors:
   - Ansible Network Community (ansible-network)
 dependencies:
-  "ansible.netcommon": "*"
+  "ansible.netcommon": ">=2.5.0"
 license_file: LICENSE
 name: frr
 tags: [routing, networking, facts]
