--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,11 @@
 ---
 repos:
+  - repo: https://github.com/ansible-network/collection_prep
+    rev: 1.1.0
+    hooks:
+      - id: autoversion
+      - id: update-docs
+
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
     hooks:
@@ -17,7 +23,7 @@ repos:
       - id: add-trailing-comma
 
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: "v3.0.0-alpha.6"
+    rev: "v3.0.0-alpha.4"
     hooks:
       - id: prettier
         # Original hook implementation is flaky due to *several* bugs described
@@ -51,8 +57,3 @@ repos:
     rev: 23.1.0
     hooks:
       - id: black
-
-  - repo: https://github.com/ansible-network/collection_prep
-    rev: 1.1.0
-    hooks:
-      - id: update-docs
