Prepare for release v2.0.2 (#57)
* Prepare for v2.0.2 release

Signed-off-by: NilashishC <nilashishchakraborty8@gmail.com>

* Update

Signed-off-by: NilashishC <nilashishchakraborty8@gmail.com>

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

---------

Signed-off-by: NilashishC <nilashishchakraborty8@gmail.com>
Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -54,3 +54,9 @@ releases:
     fragments:
       - netcommon_ref_update.yaml
     release_date: "2022-05-05"
+  2.0.2:
+    changes:
+      release_summary: This release includes README update and assorted sanity fixes.
+    fragments:
+      - gha_sanity_fix.yml
+    release_date: "2023-04-14"
