--- a/changelogs/fragments/bump_215.yaml
+++ b/changelogs/fragments/bump_215.yaml
@@ -1,4 +1,6 @@
 ---
 major_changes:
   - Bumping requires_ansible to >=2.15.0, since previous ansible-core versions are EoL now.
-release_summary: Starting from this release, the minimum ansible-core version this collection requires is 2.15.0. The last known version compatible with ansible-core<2.15 is v2.0.2.
+release_summary: >
+  Starting from this release, the minimum ansible-core version this collection requires is 2.15.0.
+  The last known version compatible with ansible-core<2.15 is v2.0.2.
